[tool.poetry]
name = "crontools"
version = "0.1.5"
description = "Python cron tools"
authors = ["Dmitry Pershin <dapper1291@gmail.com>"]
license = "Unlicense"
readme = "README.rst"
homepage = "https://github.com/dapper91/crontools"
repository = "https://github.com/dapper91/crontools"
keywords = ["cron", "crontab", "cron-utils", "cron-tools", "parser"]
classifiers = [
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
tzlocal = "^2.0"
types-tzlocal = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.0"
freezegun = "^1.2"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
