[tool.poetry]
name = "crontools"
version = "0.1.5"
description = "Python cron tools"
authors = ["Dmitry Pershin <dapper1291@gmail.com>"]
license = "Unlicense"
readme = "README.rst"
homepage = "https://github.com/dapper91/crontools"
repository = "https://github.com/dapper91/crontools"
keywords = ["cron", "crontab", "cron-utils", "cron-tools", "parser"]
classifiers = [
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]
include = ["crontools/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
tzlocal = "^2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
freezegun = "^1.2.1"
types-tzlocal = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
allow_redefinition = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
